dockerfiles/cli/scripts/openshift/multi-user/keycloak/route.yaml
apiVersion: v1
kind: Route
metadata:
  name: "keycloak"
spec:
  port:
    targetPort: '5050'
  to:
    kind: Service
    name: "keycloak"
